--- a/testScripts/report.html
+++ b/testScripts/report.html
@@ -40,5 +40,19 @@
 
 <tbody> 
 
+<tr><td>14</td><td>view Order History</td><td class="passed">Passed</td></tr>
+<tr><td>13</td><td>Add To Cart</td><td class="passed">Passed</td></tr>
+<tr><td>12</td><td>User Login</td><td class="passed">Passed</td></tr>
+<tr><td>11</td><td>Admin Logout</td><td class="passed">Passed</td></tr>
+<tr><td>6</td><td>delete Restaurant</td><td class="passed">Passed</td></tr>
+<tr><td>5</td><td>Add Product</td><td class="passed">Passed</td></tr>
+<tr><td>4</td><td>Edit Restaurant</td><td class="passed">Passed</td></tr>
+<tr><td>3</td><td>Add Restaurant</td><td class="passed">Passed</td></tr>
 <tr><td>2</td><td>Admin Login</td><td class="passed">Passed</td></tr>
-<tr><td>1</td><td>User SignUp</td><td class="p
+<tr><td>1</td><td>User SignUp</td><td class="passed">Passed</td></tr>
+</tbody>
+
+
+    </table>
+</body>
+</html>
